--- a/examples/log4j.properties
+++ b/examples/log4j.properties
@@ -1,9 +1,49 @@
-# Root logger option
-log4j.rootLogger=INFO, file
-# Direct log messages to a log file
-log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=./loging.log
-log4j.appender.file.MaxFileSize=1MB
-log4j.appender.file.MaxBackupIndex=1
-log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+agent1.sources = source1
+agent1.sources.source1.type = com.cloudera.sa.flume.file.loader.LocalFileSource
+agent1.sources.source1.selector.type = com.cloudera.sa.flume.file.loader.RoundRobinSelector
+agent1.sources.source1.input.dir = /home/cloudera/flume-test/FileLoader/input
+agent1.sources.source1.success.dir = /home/cloudera/flume-test/FileLoader/success
+agent1.sources.source1.fail.dir = /home/cloudera/flume-test/FileLoader/fail
+agent1.sources.source1.process.dir = /home/cloudera/flume-test/FileLoader/process
+agent1.sources.source1.reader.count = 4 
+ 
+agent1.sources.source1.interceptors = interceptors1
+agent1.sources.source1.interceptors.interceptors1.type = com.cloudera.sa.flume.file.loader.FilePrepInterceptor
+
+agent1.channels = channel1 channel2
+
+agent1.channels.channel1.type = memory
+agent1.channels.channel1.capacity = 1000
+agent1.channels.channel1.transactionCapactiy = 100
+
+agent1.channels.channel2.type = memory
+agent1.channels.channel2.capacity = 1000
+agent1.channels.channel2.transactionCapactiy = 100
+
+agent1.sources.source1.channels = channel1 channel2
+
+agent1.sinks = sink1 sink2
+
+agent1.sinks.sink1.type = hdfs
+agent1.sinks.sink1.channel = channel1
+agent1.sinks.sink1.hdfs.path = hdfs://127.0.0.1:8020/user/cloudera/flume/events/
+agent1.sinks.sink1.hdfs.filePrefix = sink1
+agent1.sinks.sink1.hdfs.FileType = SequenceFile
+agent1.sinks.sink1.hdfs.writeFormat = text
+agent1.sinks.sink1.hdfs.rollInterval = 0
+agent1.sinks.sink1.hdfs.rollSize = 0
+agent1.sinks.sink1.hdfs.rollCount = 10
+agent1.sinks.sink1.hdfs.codeC = org.apache.hadoop.io.compress.SnappyCodec
+agent1.sinks.sink1.hdfs.batchSize = 2
+
+agent1.sinks.sink2.type = hdfs
+agent1.sinks.sink2.channel = channel2
+agent1.sinks.sink2.hdfs.path = hdfs://127.0.0.1:8020/user/cloudera/flume/events/
+agent1.sinks.sink2.hdfs.filePrefix = sink2
+agent1.sinks.sink2.hdfs.FileType = SequenceFile
+agent1.sinks.sink2.hdfs.writeFormat = text
+agent1.sinks.sink2.hdfs.rollInterval = 0
+agent1.sinks.sink2.hdfs.rollSize = 0
+agent1.sinks.sink2.hdfs.rollCount = 10
+agent1.sinks.sink2.hdfs.codeC = snappy
+agent1.sinks.sink2.hdfs.batchSize = 2
