--- a/examples/BasicFileLoader.properties
+++ b/examples/BasicFileLoader.properties
@@ -8,7 +8,7 @@ agent1.sources.source1.process.dir = /home/cloudera/flume-test/FileLoader/proces
 agent1.sources.source1.reader.count = 4 
  
 agent1.sources.source1.interceptors = interceptors1
-agent1.sources.source1.interceptors.interceptors1.type = com.cloudera.sa.flume.file.loader.FileHeaderConst
+agent1.sources.source1.interceptors.interceptors1.type = com.cloudera.sa.flume.file.loader.FilePrepInterceptor
 
 agent1.channels = channel1 channel2
 
@@ -27,17 +27,21 @@ agent1.sinks = sink1 sink2
 agent1.sinks.sink1.type = hdfs
 agent1.sinks.sink1.channel = channel1
 agent1.sinks.sink1.hdfs.path = hdfs://127.0.0.1:8020/user/cloudera/flume/events/
-agent1.sinks.sink1.hdfs.filePrefix = sink1-
+agent1.sinks.sink1.hdfs.filePrefix = sink1
+agent1.sinks.sink1.hdfs.FileType = SequenceFile
+agent1.sinks.sink1.hdfs.writeFormat = text
 agent1.sinks.sink1.hdfs.rollInterval = 0
 agent1.sinks.sink1.hdfs.rollSize = 0
 agent1.sinks.sink1.hdfs.rollCount = 10
-agent1.sinks.sink1.hdfs.codeC = snappy
+agent1.sinks.sink1.hdfs.codeC = org.apache.hadoop.io.compress.SnappyCodec
 agent1.sinks.sink1.hdfs.batchSize = 2
 
 agent1.sinks.sink2.type = hdfs
 agent1.sinks.sink2.channel = channel2
 agent1.sinks.sink2.hdfs.path = hdfs://127.0.0.1:8020/user/cloudera/flume/events/
-agent1.sinks.sink2.hdfs.filePrefix = sink2-
+agent1.sinks.sink2.hdfs.filePrefix = sink2
+agent1.sinks.sink2.hdfs.FileType = SequenceFile
+agent1.sinks.sink2.hdfs.writeFormat = text
 agent1.sinks.sink2.hdfs.rollInterval = 0
 agent1.sinks.sink2.hdfs.rollSize = 0
 agent1.sinks.sink2.hdfs.rollCount = 10
